<resources>
    <string name="app_name">职信</string>
    <string name="message">正聊</string>
    <string name="score">评分</string>
    <string name="application">应用</string>
    <string name="career">社区</string>
    <string name="my_center">我的</string>
    <string name="h5_url">https://h5pay.jd.com/degrade?</string>
    <string name="net_connect_timeout">网络连接超时</string>
    <string name="net_error">网络异常,请稍后重试</string>
    <string name="net_fatal_error">请求失败，请检查您的网络</string>
    <string name="net_no_connect">无网络连接，请检查您的网络</string>
    <string name="server_error">服务器错误</string>
    <string name="sdk_version">2.1.0</string>
    <string name="historical_score"><u>phone:0123456</u></string>
    <string name="education">学历</string>
    <string-array name="state">
        <item>离职-随时到岗</item>
        <item>暂不考虑</item>
        <item>考虑机会</item>
    </string-array>
    <string-array name="constellation">
        <item>白羊座</item>
        <item>金牛座</item>
        <item>双子座</item>
        <item>巨蟹座</item>
        <item>狮子座</item>
        <item>处女座</item>
        <item>天秤座</item>
        <item>天蝎座</item>
        <item>射手座</item>
        <item>摩羯座</item>
        <item>水瓶座</item>
        <item>双鱼座</item>
    </string-array>
    <string-array name="nature">
        <item>国企</item>
        <item>民营</item>
        <item>中外合资</item>
        <item>外商独资</item>
        <item>其它</item>
    </string-array>
    <string-array name="scale">
        <item> 0-20</item>
        <item>20-100</item>
        <item>100-500</item>
        <item>500-1000</item>
        <item>1000-10000</item>
        <item>10000以上</item>
    </string-array>
    <string-array name="financing">
        <item>未融资</item>
        <item>天使轮</item>
        <item>A轮</item>
        <item>B轮</item>
        <item>C轮</item>
        <item>C轮以上</item>
        <item>已上市</item>
        <item>不需要融资</item>
    </string-array>
    <string name="phone_number">手机号</string>
    <string name="pass_word">密&#12288;码</string>
    <string name="register">注册</string>
    <string name="login">登&#12288;陆</string>
    <string name="personage_login">个人登录</string>
    <string name="company">企业</string>
    <string name="profession_card">职业卡牌</string>
    <string name="about_zhi_xin">关于职信</string>
    <string name="setting">设置</string>
    <string name="certified_company">公司认证</string>
    <string name="user_attestation">我的认证</string>
    <string name="identity_authentication">身份认证</string>
    <string name="education_authentication">学历认证</string>
    <string name="work_authentication">工作认证</string>
    <string name="certificate_authentication">证书认证</string>
    <string name="shill_authentication">技能认证</string>
    <string name="upload">上传</string>
    <string name="uploading">上传中...</string>
    <string name="alert_phone_number_is_null">手机号不能为空</string>
    <string name="alert_verification_code_is_null">验证码不能为空</string>
    <string name="alert_phone_number_unusable">请输入正确的手机号</string>
    <string name="alert_pass_word_unusable">密码不能为空</string>
    <string name="alert_pass_word_length">密码长度小于6位</string>
    <string name="alert_pass_word_not_match">重复密码不一致</string>
    <string name="forget_password">忘记密码?</string>
    <string name="landing">登陆中...</string>
    <string name="registering">注册中...</string>
    <string name="cancel">取消</string>
    <string name="make_sure">确认</string>
    <string name="personal_register">个人账号注册</string>
    <string name="company_register">企业账号注册</string>
    <string name="personal">个人</string>
    <string name="verification_code">验证码</string>
    <string name="password_hint">请设置一个6~16位的密码</string>
    <string name="had_read_and_agree">我已阅读并同意</string>
    <string name="agreement">《用户协议》</string>
    <string name="get_success_and_waiting">短信处理成功,请耐心等待</string>
    <string name="verification_code_is_null">请输入正确的验证码</string>
    <string name="agree_agreement">请同意用户协议</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="send_again">秒后重新发送</string>
    <string name="register_success">注册成功</string>
    <string name="register_false">该手机号已注册</string>
    <string name="account_unusable">账号已存在</string>
    <string name="hint_input_password">请确认密码</string>
    <string name="hint_input_phone_number">请输入手机号</string>
    <string name="login_hint_input_password">请输入密码</string>
    <string name="forget_password_title">忘记密码</string>
    <string name="fix_success">修改成功</string>
    <string name="personal_authentication">我的认证</string>
    <string name="company_authentication">企业认证</string>
    <string name="personal_resume_setting">简历设置</string>
    <string name="center_company_authentication">公司认证</string>
    <string name="organization_chart">组织架构</string>
    <string name="unverified">未认证</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>
    <string name="time_of_graduation">毕业时间</string>
    <string name="back">返回</string>
    <string name="btn_make_sure">确定</string>
    <string name="organizational_structure">组织架构</string>
    <string name="search">搜 索</string>
    <string name="search_cancel">取消</string>
    <string name="invite_colleague">邀请同事加入</string>
    <string name="image_upload_failure">图片上传失败!</string>
    <string name="need_to_do">功能待开发...</string>
    <string name="authenticate_status_null">未认证</string>
    <string name="authenticate_status_ing">认证中</string>
    <string name="authenticate_status_success">认证成功</string>
    <string name="authenticate_status_failure">认证失败</string>
    <string name="come_in_soon">come is soon</string>
    <string name="user_name">真实姓名</string>
    <string name="user_id_card_code">身份证号</string>
    <string name="alter_input_user_name">请输入用户姓名</string>
    <string name="alert_input_user_id_card_code">请输入身份证号</string>
    <string name="alert_upload_photo_id_card">请上传手持身份证</string>
    <string name="alert_upload_photo_id_card_positive">请上传身份证正面</string>
    <string name="alert_upload_photo_id_card_back">请上传身份证反面</string>
    <string name="hint_input_user_name">请输入身份证姓名</string>
    <string name="hint_input_id_card_code">请输入身份证号码</string>
    <string name="submit_success">提交成功,请等待审核...</string>
    <string name="submit_failure">提交失败,请重新编辑...</string>
    <string name="certificate_certification">证书认证</string>
    <string name="text_empty_with_default">毕业时间</string>
    <string name="first_test">初始评测</string>
    <string name="alter_user_had_test_before">您已参加过测评</string>
    <string name="my_resume">我的简历</string>
    <string name="privacy_setting">隐私设置</string>
    <string name="user_info">个人资料</string>
    <string name="work_status_left">离职-随时到岗</string>
    <string name="work_status_on_job">在职-暂不考虑</string>
    <string name="work_status_taking_chances">在职-考虑机会</string>
    <string name="change_failed">修改失败</string>
    <string name="manager_job_intension">管理求职意向</string>
    <string name="zhi_xin_card">职信卡牌</string>
    <string name="finish">完成</string>
    <string name="alter_selected_mast_three">最多选择3项</string>
    <string name="handler_success">操作成功</string>
    <string name="handler_fail">操作失败</string>
    <string name="alter_selected_null">您尚未进行选择</string>
    <string name="service_error">服务器异常</string>
    <string name="expected_job_title">期望职位</string>
    <string name="card_basic_selected">基础</string>
    <string name="card_basic_default">基</string>
    <string name="card_aptitude_selected">资质</string>
    <string name="card_aptitude_default">资</string>
    <string name="card_shill_selected">技能</string>
    <string name="card_shill_default">技</string>
    <string name="card_luck_selected">缘分</string>
    <string name="card_luck_default">缘</string>
    <string name="card_career_selected">生涯</string>
    <string name="card_career_default">生</string>
    <string name="complete_user_information">请先创建卡牌</string>
    <string name="complete_user_base_info">请先完善基本信息</string>
    <string name="loading">正在登录...</string>
    <string name="update_password">重置密码</string>
    <string name="get_sms_code_success">获取验证码成功</string>
    <string name="update_password_success">重置密码成功</string>
    <string name="create_company_card">创建卡牌</string>
    <string name="create_company_success">卡牌创建成功</string>
    <string name="add_department_success">子部门创建成功</string>
    <string name="delete_success">删除成功</string>
    <string name="update_success">更新成功</string>
    <string name="new_add_department">新建部门</string>
    <string name="new_add_department_success">新建部门成功</string>
    <string name="text_department_is_null">暂无部门</string>
    <string name="next_step">下级</string>
    <string name="choice_member">选择联系人</string>
    <string name="user_know">我知道了</string>
    <string name="authentication_again">重新认证</string>
    <string name="identity_failure_text">1.图像不清晰\n2.图像有残缺\n3.图像过暗或过爆</string>
    <string name="to_see">查看</string>
    <string name="audit_ing_please_waite">正在审核中,请耐心等待</string>
    <string name="certified_dialog_title">当前您还未认证\n认证之后能解锁更多功能哦</string>
    <string name="certified_dialog_content">您也可以通过"我的"入口进行认证</string>
    <string name="btn_certified">去认证</string>
    <string name="manager_text">管理</string>
    <string name="company_history_event">公司事件</string>
    <string name="add_event_success">大事件添加成功</string>
    <string name="edit_event_success">大事件修改成功</string>
    <string name="dialog_summit_ing">正在提交</string>
    <string name="add_certificate">添加证书</string>
    <string name="work_clock_in">工作打卡</string>
    <string name="clock_in">打卡</string>
    <string name="clock_in_statistics">统计</string>
    <string name="clock_start">上班打卡</string>
    <string name="clock_end">下班打卡</string>
    <string name="clock_in_setting">设置</string>
    <string name="statistics_by_day">日统计</string>
    <string name="statistics_by_month">月统计</string>
    <string name="statistics_by_user">我的</string>
    <string name="clock_info_detail">打卡明细</string>
    <string name="clock_time_late">迟到</string>
    <string name="clock_time_before">早退</string>
    <string name="clock_time_miss">缺卡</string>
    <string name="clock_time_absenteeism">旷工</string>
    <string name="clock_finished">已打卡</string>
    <string name="clock_lack">应到但未打卡</string>
    <string name="new_add_attendance_group">新建考勤组</string>
    <string name="setting_attendance_group_empty">当前暂未设置考勤组</string>
    <string name="attendance_group_name">考勤组名称</string>
    <string name="hint_input_attendance_name">请输入考勤组名称</string>
    <string name="attendance_group_number">参与人数</string>
    <string name="btn_next">下一步</string>
    <string name="setting_work_time">设置工作日</string>
    <string name="setting_begin_time">上班</string>
    <string name="setting_end_time">下班</string>
    <string name="setting_time_scope">上班弹性时间</string>
    <string name="setting_time_absenteeism">旷工</string>
    <string name="setting_wifi">打卡wifi</string>
    <string name="setting_add_wifi">添加wifi</string>
    <string name="edit">编辑</string>
    <string name="edit_cancel">取消</string>
    <string name="wifi_access">获取方式</string>
    <string name="wifi_rule">1.此页面会自动采集当前连接WI-FI的BSSID \n2.若公司有多
    个WI-FI,请依次手动连接到各个WI-FI,再切换到此页面采集数据 \n3.采集完成后,选择所需WI-FI并提交</string>
    <string name="attendance_day_normal">出勤天数</string>
    <string name="attendance_late">迟到</string>
    <string name="attendance_before">早退</string>
    <string name="job_card_user_name">姓名</string>
    <string name="job_card_email">工作邮箱</string>
    <string name="job_card_department">部门</string>
    <string name="job_card_position">职位</string>
    <string name="job_card_work_telephone">工作手机号</string>
    <string name="job_card_code">工号</string>
    <string name="job_card_company_telephone">分机号</string>
    <string name="job_card_work_place">办公地点</string>
    <string name="job_card_begin_time">入职时间</string>
    <string name="job_card_user_role_type">员工类别</string>
    <string name="job_card_user_status">员工状态</string>
    <string name="job_card_test_time">试用期</string>
    <string name="job_card_formal_time">转正日期</string>
</resources>