<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View style="@style/division_view" />


    <View style="@style/line" />

    <LinearLayout
        android:id="@+id/ll_work_time"
        style="@style/style_linear_layout_item">

        <TextView
            android:layout_width="@dimen/dp_120"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_big"
            android:paddingLeft="@dimen/padding_big"
            android:paddingTop="@dimen/padding_big"
            android:text="@string/setting_work_time" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_work_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_big"
            android:drawableRight="@drawable/icon_next"
            android:drawablePadding="@dimen/padding_normal"
            android:ellipsize="end"
            android:gravity="right"
            android:lines="1"
            android:text=""
            android:textColor="@color/minor_text_color"
            android:textSize="@dimen/font_size_14sp" />
    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:id="@+id/ll_work_begin_time"
        style="@style/style_linear_layout_item">

        <TextView
            style="@style/style_item_left_text"
            android:text="@string/setting_begin_time" />

        <TextView
            android:id="@+id/tv_begin_time"
            style="@style/style_item_right_text"
            android:text="" />
    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:id="@+id/ll_work_end_time"
        style="@style/style_linear_layout_item">

        <TextView
            style="@style/style_item_left_text"
            android:text="@string/setting_end_time" />

        <TextView
            android:id="@+id/tv_end_time"
            style="@style/style_item_right_text"
            android:text="" />
    </LinearLayout>

    <View style="@style/division_view" />

    <LinearLayout
        android:id="@+id/ll_work_scope_time"
        style="@style/style_linear_layout_item">

        <TextView
            style="@style/style_item_left_text"
            android:text="@string/setting_time_scope" />

        <com.zhixing.work.zhixin.widget.ClearEditText
            android:id="@+id/flex_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:gravity="right"
            android:hint="请输入弹性时间，没有可不填"
            android:inputType="number"
            android:paddingRight="@dimen/padding_big"
            android:textSize="@dimen/font_size_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_small"
            android:text="分钟"
            android:textColor="@color/minor_text_color"
            android:textSize="@dimen/font_small" />
    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:id="@+id/ll_absenteeism_time"
        style="@style/style_linear_layout_item">

        <TextView
            style="@style/style_item_left_text"
            android:text="@string/setting_time_absenteeism" />

        <com.zhixing.work.zhixin.widget.ClearEditText
            android:id="@+id/absenteeism_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@null"
            android:gravity="right"
            android:hint="请输入旷工最低标准范围（1-1140）"
            android:inputType="number"
            android:paddingRight="@dimen/padding_big"
            android:textSize="@dimen/font_size_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_small"
            android:text="分钟"
            android:textColor="@color/minor_text_color"
            android:textSize="@dimen/font_small" />
    </LinearLayout>

    <View style="@style/division_view" />

    <LinearLayout
        android:id="@+id/ll_wifi"
        style="@style/style_linear_layout_item">

        <TextView
            style="@style/style_item_left_text"
            android:text="@string/setting_wifi" />

        <TextView
            android:id="@+id/tv_wifi"
            style="@style/style_item_right_text"
            android:lines="1"
            android:ellipsize="end"
            android:text="" />
    </LinearLayout>

    <View style="@style/division_view" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_finish"
        style="@style/style_bottom_btn"
        android:text="@string/save" />
</LinearLayout>