<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_personal_register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_register_bg"
            android:gravity="center"
            android:text="@string/personal_register"
            android:textColor="@color/color_text_btn"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tv_company_register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_register_bg"
            android:gravity="center"
            android:text="@string/company_register"
            android:textColor="@color/color_text_btn"
            android:textSize="@dimen/font_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/telephone_text_height"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="34dp"
        android:background="@drawable/shape_login_text_phone"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_phone"
            android:drawablePadding="@dimen/dp_10"
            android:textSize="@dimen/font_size_14sp" />

        <com.zhixing.work.zhixin.widget.ClearEditText
            android:id="@+id/editTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@null"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingRight="@dimen/telephone_text_corner"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/font_size_14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <com.zhixing.work.zhixin.widget.ClearEditText
            android:id="@+id/verification_code"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/telephone_text_height"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/shape_login_text_phone"
            android:gravity="center"
            android:hint="@string/verification_code"
            android:inputType="number"
            android:maxLength="6"
            android:paddingLeft="@dimen/dp_10"
            android:textSize="@dimen/font_size_14sp" />

        <TextView
            android:id="@+id/get_verification_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/telephone_text_height"
            android:layout_gravity="center"
            android:background="@drawable/selector_verification_code_time_bg"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/get_verification_code"
            android:textColor="@color/white"
            android:textSize="@dimen/font_small" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/telephone_text_height"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="28dp"
        android:background="@drawable/shape_login_text_phone"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_password"
            android:drawablePadding="@dimen/dp_10"
            android:textSize="@dimen/font_size_14sp" />

        <com.zhixing.work.zhixin.widget.ClearEditText
            android:id="@+id/editPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/password_hint"
            android:maxLength="16"
            android:inputType="textPassword"
            android:textColor="@color/text_color_dark"
            android:textSize="@dimen/font_size_14sp" />

        <ImageView
            android:id="@+id/show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/dp_10"
            android:padding="@dimen/dp_6"
            android:src="@drawable/icon_hide" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_make_sure"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_login_height"
        android:layout_marginBottom="42dp"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_main_btn"
        android:gravity="center"
        android:text="@string/btn_make_sure"
        android:textColor="@color/white"
        android:textSize="@dimen/font_normal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_15"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/regist_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radiobutton" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:text="@string/had_read_and_agree" />

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement" />

    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>